--- a/webroot/css/_global-nav.scss
+++ b/webroot/css/_global-nav.scss
@@ -51,7 +51,7 @@ body {
         size: 0.875rem;
     }
     color: colours.$gray-10;
-    background-color: colours.$gray-90;
+    background-color: colours.$ui-05;
 }
 .dropdown-item:hover {
     color: colours.$gray-10;
