--- a/webroot/css/lsa-carbon.scss
+++ b/webroot/css/lsa-carbon.scss
@@ -7,7 +7,7 @@
 @use 'datatables';
 
 body {
-    background-color: colours.$gray-10;
+    background-color: colours.$ui-01;
 }
 
 //Buttons
